# ug2-client

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  patch_config.toml
migrations/: 001_initial.sql  002_add_index_scripts.sql
src/: config.rs  lib.rs  main.rs
src/asset_downloader/: downloader.rs  entry_detector.rs  extractor.rs  mod.rs
src/cache/: filesystem.rs  mod.rs  redis_cache.rs
src/db/: mod.rs  models.rs
src/discord_scraper/: build_parser.rs  github_client.rs  live_scraper.rs  mod.rs  types.rs
src/patcher/: mod.rs  pipeline.rs
src/patcher/patches/: branding.rs  experiments.rs  features.rs  infrastructure.rs  mod.rs
src/server/: ip.rs  mod.rs  rate_limit.rs  routes.rs  state.rs
src/server/handlers/: api.rs  assets.rs  index.rs  mod.rs  proxy.rs  selector.rs  static_files.rs
static/: selector.css  selector.html  selector.js
tests/: branding.rs  entry_detector.rs  experiments.rs  extractor.rs  features.rs  infrastructure.rs  live_scraper.rs
